TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOUBLEQUOTE
    THEN

Grammar

Rule 0     S' -> start
Rule 1     start -> linst
Rule 2     linst -> linst inst
Rule 3     linst -> inst
Rule 4     inst -> INT NAME EQUAL expression COLON
Rule 5     inst -> STRING NAME EQUAL TEXT COLON
Rule 6     inst -> BOOL NAME EQUAL BOOLEAN COLON
Rule 7     inst -> FLOAT NAME EQUAL expression COLON
Rule 8     inst -> NAME EQUAL expression COLON
Rule 9     inst -> NAME PLUSPLUS
Rule 10    inst -> NAME MINUSMINUS
Rule 11    inst -> NAME PLUS EQUAL NUMBER
Rule 12    inst -> NAME MINUS EQUAL NUMBER
Rule 13    inst -> PRINT LPAREN expression RPAREN COLON
Rule 14    inst -> PRINTSTRING LPAREN TEXT RPAREN COLON
Rule 15    inst -> IF LPAREN expression RPAREN LBRACKET linst RBRACKET
Rule 16    inst -> WHILE LPAREN expression RPAREN LBRACKET linst RBRACKET
Rule 17    inst -> DO LBRACKET linst RBRACKET WHILE LPAREN expression RPAREN
Rule 18    inst -> FOR LPAREN inst compare COLON inst RPAREN LBRACKET linst RBRACKET
Rule 19    compare -> <empty>
Rule 20    compare -> expression EQUALS expression
Rule 21    compare -> expression LOWER expression
Rule 22    compare -> expression HIGHER expression
Rule 23    inst -> VOID NAME LPAREN RPAREN LBRACKET linst RBRACKET
Rule 24    inst -> INT NAME LPAREN RPAREN LBRACKET linst RBRACKET
Rule 25    inst -> FLOAT NAME LPAREN RPAREN LBRACKET linst RBRACKET
Rule 26    inst -> BOOL NAME LPAREN RPAREN LBRACKET linst RBRACKET
Rule 27    inst -> STRING NAME LPAREN RPAREN LBRACKET linst RBRACKET
Rule 28    inst -> VOID NAME LPAREN params RPAREN LBRACKET linst RBRACKET
Rule 29    inst -> INT NAME LPAREN params RPAREN LBRACKET linst RBRACKET
Rule 30    inst -> FLOAT NAME LPAREN params RPAREN LBRACKET linst RBRACKET
Rule 31    inst -> BOOL NAME LPAREN params RPAREN LBRACKET linst RBRACKET
Rule 32    inst -> STRING NAME LPAREN params RPAREN LBRACKET linst RBRACKET
Rule 33    inst -> NAME LPAREN args RPAREN COLON
Rule 34    args -> <empty>
Rule 35    args -> expression
Rule 36    args -> expression COLON args
Rule 37    expression -> expression PLUS expression
Rule 38    expression -> expression MINUS expression
Rule 39    expression -> expression TIMES expression
Rule 40    expression -> expression OR expression
Rule 41    expression -> expression AND expression
Rule 42    expression -> expression EQUALS expression
Rule 43    expression -> expression LOWER expression
Rule 44    expression -> expression HIGHER expression
Rule 45    expression -> expression DIVIDE expression
Rule 46    expression -> LPAREN expression RPAREN
Rule 47    expression -> NUMBER
Rule 48    expression -> NAME
Rule 49    expression -> TEXT
Rule 50    params -> <empty>
Rule 51    params -> NAME COLON params
Rule 52    params -> NAME

Terminals, with rules where they appear

AND                  : 41
BOOL                 : 6 26 31
BOOLEAN              : 6
COLON                : 4 5 6 7 8 13 14 18 33 36 51
DIVIDE               : 45
DO                   : 17
DOUBLEQUOTE          : 
EQUAL                : 4 5 6 7 8 11 12
EQUALS               : 20 42
FLOAT                : 7 25 30
FOR                  : 18
HIGHER               : 22 44
IF                   : 15
INT                  : 4 24 29
LBRACKET             : 15 16 17 18 23 24 25 26 27 28 29 30 31 32
LOWER                : 21 43
LPAREN               : 13 14 15 16 17 18 23 24 25 26 27 28 29 30 31 32 33 46
MINUS                : 12 38
MINUSMINUS           : 10
NAME                 : 4 5 6 7 8 9 10 11 12 23 24 25 26 27 28 29 30 31 32 33 48 51 52
NUMBER               : 11 12 47
OR                   : 40
PLUS                 : 11 37
PLUSPLUS             : 9
PRINT                : 13
PRINTSTRING          : 14
RBRACKET             : 15 16 17 18 23 24 25 26 27 28 29 30 31 32
RPAREN               : 13 14 15 16 17 18 23 24 25 26 27 28 29 30 31 32 33 46
STRING               : 5 27 32
TEXT                 : 5 14 49
THEN                 : 
TIMES                : 39
VOID                 : 23 28
WHILE                : 16 17
error                : 

Nonterminals, with rules where they appear

args                 : 33 36
compare              : 18
expression           : 4 7 8 13 15 16 17 20 20 21 21 22 22 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46
inst                 : 2 3 18 18
linst                : 1 2 15 16 17 18 23 24 25 26 27 28 29 30 31 32
params               : 28 29 30 31 32 51
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . linst
    (2) linst -> . linst inst
    (3) linst -> . inst
    (4) inst -> . INT NAME EQUAL expression COLON
    (5) inst -> . STRING NAME EQUAL TEXT COLON
    (6) inst -> . BOOL NAME EQUAL BOOLEAN COLON
    (7) inst -> . FLOAT NAME EQUAL expression COLON
    (8) inst -> . NAME EQUAL expression COLON
    (9) inst -> . NAME PLUSPLUS
    (10) inst -> . NAME MINUSMINUS
    (11) inst -> . NAME PLUS EQUAL NUMBER
    (12) inst -> . NAME MINUS EQUAL NUMBER
    (13) inst -> . PRINT LPAREN expression RPAREN COLON
    (14) inst -> . PRINTSTRING LPAREN TEXT RPAREN COLON
    (15) inst -> . IF LPAREN expression RPAREN LBRACKET linst RBRACKET
    (16) inst -> . WHILE LPAREN expression RPAREN LBRACKET linst RBRACKET
    (17) inst -> . DO LBRACKET linst RBRACKET WHILE LPAREN expression RPAREN
    (18) inst -> . FOR LPAREN inst compare COLON inst RPAREN LBRACKET linst RBRACKET
    (23) inst -> . VOID NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (24) inst -> . INT NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (25) inst -> . FLOAT NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (26) inst -> . BOOL NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (27) inst -> . STRING NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (28) inst -> . VOID NAME LPAREN params RPAREN LBRACKET linst RBRACKET
    (29) inst -> . INT NAME LPAREN params RPAREN LBRACKET linst RBRACKET
    (30) inst -> . FLOAT NAME LPAREN params RPAREN LBRACKET linst RBRACKET
    (31) inst -> . BOOL NAME LPAREN params RPAREN LBRACKET linst RBRACKET
    (32) inst -> . STRING NAME LPAREN params RPAREN LBRACKET linst RBRACKET
    (33) inst -> . NAME LPAREN args RPAREN COLON

    INT             shift and go to state 4
    STRING          shift and go to state 6
    BOOL            shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 5
    PRINT           shift and go to state 9
    PRINTSTRING     shift and go to state 10
    IF              shift and go to state 11
    WHILE           shift and go to state 12
    DO              shift and go to state 13
    FOR             shift and go to state 14
    VOID            shift and go to state 15

    start                          shift and go to state 1
    linst                          shift and go to state 2
    inst                           shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> linst .
    (2) linst -> linst . inst
    (4) inst -> . INT NAME EQUAL expression COLON
    (5) inst -> . STRING NAME EQUAL TEXT COLON
    (6) inst -> . BOOL NAME EQUAL BOOLEAN COLON
    (7) inst -> . FLOAT NAME EQUAL expression COLON
    (8) inst -> . NAME EQUAL expression COLON
    (9) inst -> . NAME PLUSPLUS
    (10) inst -> . NAME MINUSMINUS
    (11) inst -> . NAME PLUS EQUAL NUMBER
    (12) inst -> . NAME MINUS EQUAL NUMBER
    (13) inst -> . PRINT LPAREN expression RPAREN COLON
    (14) inst -> . PRINTSTRING LPAREN TEXT RPAREN COLON
    (15) inst -> . IF LPAREN expression RPAREN LBRACKET linst RBRACKET
    (16) inst -> . WHILE LPAREN expression RPAREN LBRACKET linst RBRACKET
    (17) inst -> . DO LBRACKET linst RBRACKET WHILE LPAREN expression RPAREN
    (18) inst -> . FOR LPAREN inst compare COLON inst RPAREN LBRACKET linst RBRACKET
    (23) inst -> . VOID NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (24) inst -> . INT NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (25) inst -> . FLOAT NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (26) inst -> . BOOL NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (27) inst -> . STRING NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (28) inst -> . VOID NAME LPAREN params RPAREN LBRACKET linst RBRACKET
    (29) inst -> . INT NAME LPAREN params RPAREN LBRACKET linst RBRACKET
    (30) inst -> . FLOAT NAME LPAREN params RPAREN LBRACKET linst RBRACKET
    (31) inst -> . BOOL NAME LPAREN params RPAREN LBRACKET linst RBRACKET
    (32) inst -> . STRING NAME LPAREN params RPAREN LBRACKET linst RBRACKET
    (33) inst -> . NAME LPAREN args RPAREN COLON

    $end            reduce using rule 1 (start -> linst .)
    INT             shift and go to state 4
    STRING          shift and go to state 6
    BOOL            shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 5
    PRINT           shift and go to state 9
    PRINTSTRING     shift and go to state 10
    IF              shift and go to state 11
    WHILE           shift and go to state 12
    DO              shift and go to state 13
    FOR             shift and go to state 14
    VOID            shift and go to state 15

    inst                           shift and go to state 16

state 3

    (3) linst -> inst .

    INT             reduce using rule 3 (linst -> inst .)
    STRING          reduce using rule 3 (linst -> inst .)
    BOOL            reduce using rule 3 (linst -> inst .)
    FLOAT           reduce using rule 3 (linst -> inst .)
    NAME            reduce using rule 3 (linst -> inst .)
    PRINT           reduce using rule 3 (linst -> inst .)
    PRINTSTRING     reduce using rule 3 (linst -> inst .)
    IF              reduce using rule 3 (linst -> inst .)
    WHILE           reduce using rule 3 (linst -> inst .)
    DO              reduce using rule 3 (linst -> inst .)
    FOR             reduce using rule 3 (linst -> inst .)
    VOID            reduce using rule 3 (linst -> inst .)
    $end            reduce using rule 3 (linst -> inst .)
    RBRACKET        reduce using rule 3 (linst -> inst .)


state 4

    (4) inst -> INT . NAME EQUAL expression COLON
    (24) inst -> INT . NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (29) inst -> INT . NAME LPAREN params RPAREN LBRACKET linst RBRACKET

    NAME            shift and go to state 17


state 5

    (8) inst -> NAME . EQUAL expression COLON
    (9) inst -> NAME . PLUSPLUS
    (10) inst -> NAME . MINUSMINUS
    (11) inst -> NAME . PLUS EQUAL NUMBER
    (12) inst -> NAME . MINUS EQUAL NUMBER
    (33) inst -> NAME . LPAREN args RPAREN COLON

    EQUAL           shift and go to state 18
    PLUSPLUS        shift and go to state 19
    MINUSMINUS      shift and go to state 20
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 23


state 6

    (5) inst -> STRING . NAME EQUAL TEXT COLON
    (27) inst -> STRING . NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (32) inst -> STRING . NAME LPAREN params RPAREN LBRACKET linst RBRACKET

    NAME            shift and go to state 24


state 7

    (6) inst -> BOOL . NAME EQUAL BOOLEAN COLON
    (26) inst -> BOOL . NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (31) inst -> BOOL . NAME LPAREN params RPAREN LBRACKET linst RBRACKET

    NAME            shift and go to state 25


state 8

    (7) inst -> FLOAT . NAME EQUAL expression COLON
    (25) inst -> FLOAT . NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (30) inst -> FLOAT . NAME LPAREN params RPAREN LBRACKET linst RBRACKET

    NAME            shift and go to state 26


state 9

    (13) inst -> PRINT . LPAREN expression RPAREN COLON

    LPAREN          shift and go to state 27


state 10

    (14) inst -> PRINTSTRING . LPAREN TEXT RPAREN COLON

    LPAREN          shift and go to state 28


state 11

    (15) inst -> IF . LPAREN expression RPAREN LBRACKET linst RBRACKET

    LPAREN          shift and go to state 29


state 12

    (16) inst -> WHILE . LPAREN expression RPAREN LBRACKET linst RBRACKET

    LPAREN          shift and go to state 30


state 13

    (17) inst -> DO . LBRACKET linst RBRACKET WHILE LPAREN expression RPAREN

    LBRACKET        shift and go to state 31


state 14

    (18) inst -> FOR . LPAREN inst compare COLON inst RPAREN LBRACKET linst RBRACKET

    LPAREN          shift and go to state 32


state 15

    (23) inst -> VOID . NAME LPAREN RPAREN LBRACKET linst RBRACKET
    (28) inst -> VOID . NAME LPAREN params RPAREN LBRACKET linst RBRACKET

    NAME            shift and go to state 33


state 16

    (2) linst -> linst inst .

    INT             reduce using rule 2 (linst -> linst inst .)
    STRING          reduce using rule 2 (linst -> linst inst .)
    BOOL            reduce using rule 2 (linst -> linst inst .)
    FLOAT           reduce using rule 2 (linst -> linst inst .)
    NAME            reduce using rule 2 (linst -> linst inst .)
    PRINT           reduce using rule 2 (linst -> linst inst .)
    PRINTSTRING     reduce using rule 2 (linst -> linst inst .)
    IF              reduce using rule 2 (linst -> linst inst .)
    WHILE           reduce using rule 2 (linst -> linst inst .)
    DO              reduce using rule 2 (linst -> linst inst .)
    FOR             reduce using rule 2 (linst -> linst inst .)
    VOID            reduce using rule 2 (linst -> linst inst .)
    $end            reduce using rule 2 (linst -> linst inst .)
    RBRACKET        reduce using rule 2 (linst -> linst inst .)


state 17

    (4) inst -> INT NAME . EQUAL expression COLON
    (24) inst -> INT NAME . LPAREN RPAREN LBRACKET linst RBRACKET
    (29) inst -> INT NAME . LPAREN params RPAREN LBRACKET linst RBRACKET

    EQUAL           shift and go to state 34
    LPAREN          shift and go to state 35


state 18

    (8) inst -> NAME EQUAL . expression COLON
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression TIMES expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression EQUALS expression
    (43) expression -> . expression LOWER expression
    (44) expression -> . expression HIGHER expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . NAME
    (49) expression -> . TEXT

    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 39
    NAME            shift and go to state 36
    TEXT            shift and go to state 40

    expression                     shift and go to state 37

state 19

    (9) inst -> NAME PLUSPLUS .

    INT             reduce using rule 9 (inst -> NAME PLUSPLUS .)
    STRING          reduce using rule 9 (inst -> NAME PLUSPLUS .)
    BOOL            reduce using rule 9 (inst -> NAME PLUSPLUS .)
    FLOAT           reduce using rule 9 (inst -> NAME PLUSPLUS .)
    NAME            reduce using rule 9 (inst -> NAME PLUSPLUS .)
    PRINT           reduce using rule 9 (inst -> NAME PLUSPLUS .)
    PRINTSTRING     reduce using rule 9 (inst -> NAME PLUSPLUS .)
    IF              reduce using rule 9 (inst -> NAME PLUSPLUS .)
    WHILE           reduce using rule 9 (inst -> NAME PLUSPLUS .)
    DO              reduce using rule 9 (inst -> NAME PLUSPLUS .)
    FOR             reduce using rule 9 (inst -> NAME PLUSPLUS .)
    VOID            reduce using rule 9 (inst -> NAME PLUSPLUS .)
    $end            reduce using rule 9 (inst -> NAME PLUSPLUS .)
    RBRACKET        reduce using rule 9 (inst -> NAME PLUSPLUS .)
    LPAREN          reduce using rule 9 (inst -> NAME PLUSPLUS .)
    NUMBER          reduce using rule 9 (inst -> NAME PLUSPLUS .)
    TEXT            reduce using rule 9 (inst -> NAME PLUSPLUS .)
    COLON           reduce using rule 9 (inst -> NAME PLUSPLUS .)
    RPAREN          reduce using rule 9 (inst -> NAME PLUSPLUS .)


state 20

    (10) inst -> NAME MINUSMINUS .

    INT             reduce using rule 10 (inst -> NAME MINUSMINUS .)
    STRING          reduce using rule 10 (inst -> NAME MINUSMINUS .)
    BOOL            reduce using rule 10 (inst -> NAME MINUSMINUS .)
    FLOAT           reduce using rule 10 (inst -> NAME MINUSMINUS .)
    NAME            reduce using rule 10 (inst -> NAME MINUSMINUS .)
    PRINT           reduce using rule 10 (inst -> NAME MINUSMINUS .)
    PRINTSTRING     reduce using rule 10 (inst -> NAME MINUSMINUS .)
    IF              reduce using rule 10 (inst -> NAME MINUSMINUS .)
    WHILE           reduce using rule 10 (inst -> NAME MINUSMINUS .)
    DO              reduce using rule 10 (inst -> NAME MINUSMINUS .)
    FOR             reduce using rule 10 (inst -> NAME MINUSMINUS .)
    VOID            reduce using rule 10 (inst -> NAME MINUSMINUS .)
    $end            reduce using rule 10 (inst -> NAME MINUSMINUS .)
    RBRACKET        reduce using rule 10 (inst -> NAME MINUSMINUS .)
    LPAREN          reduce using rule 10 (inst -> NAME MINUSMINUS .)
    NUMBER          reduce using rule 10 (inst -> NAME MINUSMINUS .)
    TEXT            reduce using rule 10 (inst -> NAME MINUSMINUS .)
    COLON           reduce using rule 10 (inst -> NAME MINUSMINUS .)
    RPAREN          reduce using rule 10 (inst -> NAME MINUSMINUS .)


state 21

    (11) inst -> NAME PLUS . EQUAL NUMBER

    EQUAL           shift and go to state 41


state 22

    (12) inst -> NAME MINUS . EQUAL NUMBER

    EQUAL           shift and go to state 42


state 23

    (33) inst -> NAME LPAREN . args RPAREN COLON
    (34) args -> .
    (35) args -> . expression
    (36) args -> . expression COLON args
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression TIMES expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression EQUALS expression
    (43) expression -> . expression LOWER expression
    (44) expression -> . expression HIGHER expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . NAME
    (49) expression -> . TEXT

    RPAREN          reduce using rule 34 (args -> .)
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 39
    NAME            shift and go to state 36
    TEXT            shift and go to state 40

    args                           shift and go to state 43
    expression                     shift and go to state 44

state 24

    (5) inst -> STRING NAME . EQUAL TEXT COLON
    (27) inst -> STRING NAME . LPAREN RPAREN LBRACKET linst RBRACKET
    (32) inst -> STRING NAME . LPAREN params RPAREN LBRACKET linst RBRACKET

    EQUAL           shift and go to state 45
    LPAREN          shift and go to state 46


state 25

    (6) inst -> BOOL NAME . EQUAL BOOLEAN COLON
    (26) inst -> BOOL NAME . LPAREN RPAREN LBRACKET linst RBRACKET
    (31) inst -> BOOL NAME . LPAREN params RPAREN LBRACKET linst RBRACKET

    EQUAL           shift and go to state 47
    LPAREN          shift and go to state 48


state 26
